--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 	<link href="fonta/css/all.css" rel="stylesheet">
 </head>
 <body>
+	<span class="alltextt" style="top: 850px;left: 10%;">F</span>
+	<span class="alltextt" style="top: 1650px;right: 10%;">D</span>
+	<span class="alltextt" style="top: 1300px;right: -18%;font-size: 180px;">FURNITURE</span>
+	<span class="alltextt" style="top: 2150px;left: -11%;font-size: 180px;">DECOR</span>
+	<span class="alltextt" style="top: 4700px;left: -4%;font-size: 180px;z-index: 20;">ABOUT</span>
 	<div class="block_1">
 		<div class="black_blc">
 			<div class="stick rt"></div>
@@ -74,7 +79,7 @@
 			<div class="stick7"></div>
 		</div>
 		<div class="main_block2_1">
-			<img src="./css/1.png" width="644px" height="425px" style="max-width: 75%">			
+			<img src="./css/2.png" width="644px" height="425px" style="max-width: 75%">			
 			<div class="content">
 				<div class="hip45">
 					<div class="text1">DECOR</div>
