--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<span class="alltextt" style="top: 850px;left: 10%;">F</span>
 	<span class="alltextt" style="top: 1650px;right: 10%;">D</span>
-	<span class="alltextt" style="top: 1300px;right: -18%;font-size: 180px;">FURNITURE</span>
+	<span class="alltextt" style="top: 1300px;right: 0;font-size: 180px;">FURNITU</span>
 	<span class="alltextt" style="top: 2150px;left: -11%;font-size: 180px;">DECOR</span>
 	<span class="alltextt" style="top: 4700px;left: -4%;font-size: 180px;z-index: 20;">ABOUT</span>
 	<div class="block_1">
