--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<span class="alltextt" style="top: 850px;left: 10%;">F</span>
 	<span class="alltextt" style="top: 1650px;right: 10%;">D</span>
-	<span class="fs" style="right: 0%;">FURNITU</span>
+	<span class="alltextt" style="top: 1300px;right: 0;font-size: 180px;">FURNITU</span>
 	<span class="alltextt" style="top: 2150px;left: -11%;font-size: 180px;">DECOR</span>
 	<span class="alltextt" style="top: 4700px;left: -4%;font-size: 180px;z-index: 20;">ABOUT</span>
 	<div class="block_1">
@@ -179,7 +179,7 @@
 		<div class="footer">
 			<div class="str_logo" style="color: #676565;font-size: 16px;margin-left: 100px;font-family:Proxima Nova;">&copy; 2016 WOODER</div>
 			<div class="str_logo" style="font-family:Proxima Nova;">W O O D E R</div>
-			<div class="str_logo" style="color: #676565;font-size: 16px;margin-right: 100px;font-family:Proxima Nova;">Designed by Rick and Morty</div>
+			<div class="str_logo" style="color: #676565;font-size: 16px;margin-right: 60px;font-family:Proxima Nova;">Designed by Rick and Morty</div>
 		</div>
 	</div>
 </body>
