--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 			<div class="str_logo" style="color: #676565;font-size: 16px;margin-right: 25px;font-family:Proxima Nova;">Designed by Rick and Morty</div>
 		</div>
 	</div>
+	<script src="./js/mainjs.js">
 </body>
 </html>
 
